--- a/css/style.css
+++ b/css/style.css
@@ -209,6 +209,12 @@ header {
         height: 390px;
     }
 }
+@media screen and ( max-width: 600px) {
+    .col-md-3 {
+        width: 100%;
+        height: 390px;
+    }
+}
 #photoImg1 {
     background-image: url('../img/shape.png');
 }
@@ -232,9 +238,6 @@ header {
 }
 #photoImg8 {
     background-image: url(../img/public%20art.png);
-}
-#phtoImg9 {
-    background-image: url('https://unsplash.it/220/220?image=999');
 }
 
 /* footer */
@@ -265,7 +268,7 @@ p {
 .toggle-chatroom {
     width: 50px;
     height: 50px;
-    border-radius: 10px;
+    border-radius: 100px;
     box-shadow: 0 5px 20px rgba(0, 0, 0, .5);
     background: white;
     color: orange;
@@ -308,7 +311,7 @@ p {
 }
 .messages>li.client>span {
     float: right;
-    background: orange;
+    background: pink;
     color: white;
 }
 .chatroom-input-group {
